--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
         </nav>
         <div class="main_cake">
-        <img src="/.images/cake.png" alt="">
+        <img src="./images/cake.png" alt="">
     </div>
     <div class="container_text">
         <h1 class="header_heading">Торты <br> на  заказ</h1>
